# DistributedMobilityDB

./: CMakeLists.txt  License  README.md  control.in
benchmark/ais/: queries.sql
benchmark/osm/: partitioning.sql  queries.sql
include/catalog/: nodes.h  pg_dist_spatiotemporal_dist_functions.h  pg_dist_spatiotemporal_tables.h  pg_dist_spatiotemporal_tiles.h  pg_execution_run.h  table_ops.h
include/distributed_functions/: coordinator_operations.h  distributed_function.h  worker_operations.h
include/executor/: executor_tasks.h  multi_phase_executor.h  spatiotemporal_executor.h  tile_tasks.h
include/general/: catalog_management.h  general_types.h  helper_functions.h  rte.h  spatiotemporal_processing.h
include/multirelation/: multirelation_utils.h  tiling_utils.h
include/partitioning/: md_tiling.h  multirelation.h  tiling_utils.h
include/planner/: distributed_mobilitydb_explain.h  distributed_mobilitydb_planner.h  planner_strategies.h  planner_utils.h  post_processing.h  predicate_management.h  query_semantics.h  query_semantics_check.h  spatiotemporal_explain.h  spatiotemporal_planner.h
include/post_processing/: post_processing.h
include/utils/: helper_functions.h  planner_utils.h
sql/: CMakeLists.txt  distributed_mobilitydb--1.0.sql
sql/distributed_functions/: CMakeLists.txt  category1.sql
sql/helper_functions/: CMakeLists.txt  catalog_info_check.sql  colocation_utils.sql  write_to_catalog.sql
sql/partitioning/: CMakeLists.txt  colocation.sql  crange.sql  data_allocation.sql  preprocessing.sql  search_in_dimensions.sql  shape_segmentation.sql  tiling.sql
src/: CMakeLists.txt  distributed_mobilitydb.control
src/catalog/: CMakeLists.txt  nodes.c  table_ops.c
src/distributed_functions/: CMakeLists.txt  distributed_function.c
src/executor/: CMakeLists.txt  executor_tasks.c  multi_phase_executor.c  tile_tasks.c
src/general/: CMakeLists.txt  catalog_management.c  helper_functions.c  rte.c  shared_library_init.c
src/multirelation/: CMakeLists.txt  multirelation_utils.c
src/partitioning/: CMakeLists.txt  mutlirelation.c  tiling_utils.c
src/planner/: CMakeLists.txt  colocation.c  distributed_mobilitydb_explain.c  distributed_mobilitydb_planner.c  planner_strategies.c  planner_utils.c  predicate_management.c  query_parameters.c  query_semantics.c  spatiotemporal_explain.c  spatiotemporal_planner.c
src/post_processing/: CMakeLists.txt  post_processing.c
src/utils/: CMakeLists.txt  helper_functions.c  planner_utils.c
